--- a/src/app/features/po/initiate-po/po-quantity-makes/po-quantity-makes.component.html
+++ b/src/app/features/po/initiate-po/po-quantity-makes/po-quantity-makes.component.html
@@ -80,8 +80,8 @@
             <!-- Name Column -->
 
             <ng-container matColumnDef="Fullfillment Date" class="date-dialog-add-edit">
-              <th mat-header-cell *matHeaderCellDef>Fullfillment Date</th>
-              <td mat-cell *matCellDef="let element; let i = index">
+              <th mat-header-cell *matHeaderCellDef class="fulfillment-date-col">Fullfillment Date</th>
+              <td mat-cell *matCellDef="let element; let i = index" class="fulfillment-date-col">
                 <mat-form-field class="border-input"
                   [formGroupName]="i + (mati ? checkedMaterialsList[mati].prevMatListLength : 0)">
                   <!-- <mat-label>Fullfil </mat-label> -->
