--- a/src/app/shared/dialogs/add-grn/add-supplier/add-supplier.component.html
+++ b/src/app/shared/dialogs/add-grn/add-supplier/add-supplier.component.html
@@ -79,7 +79,8 @@
       </div>
       <div class="col-md-3 col-xs-12">
         <mat-form-field class="border-input" [ngClass]="{'width-95': isMobile}">
-          <input matInput type="email" formControlName="email" placeholder="Email *" />
+          <label matTooltip=" {{ form.controls['email'].value }}">{{ form.controls["email"].value }}</label>
+          <input hidden matInput type="email" formControlName="email" placeholder="Email *" />
           <small *ngIf="form.controls['email'].hasError('required') && form.controls['email'].touched" class="form-error-msg"> Email is required </small>
           <small *ngIf="form.controls['email'].hasError('pattern') && form.controls['email'].touched" class="form-error-msg"> Enter Valid Email</small>
           <small *ngIf="form.get('email').errors?.maxlength" class="warning-color">maximun characters allowed is 300</small>
