--- a/src/app/features/app-dashboard/app-dashboard.component.html
+++ b/src/app/features/app-dashboard/app-dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="dashboard app-dashboard">
-  <div class="container-fluid bg-gray pl-0 pr-3">
+  <div class="container-fluid bg-gray pl-0 pr-3 mt-120">
     <div class="row">
       <!-- <sidebar-navigation (collapseMenu)="isSidebarCollapsed($event)"></sidebar-navigation> -->
       <!-- [class.changeWidth]="isSideNavCollapsed" -->
