--- a/src/app/features/supplier/supplier-details/supplier-details.component.html
+++ b/src/app/features/supplier/supplier-details/supplier-details.component.html
@@ -1,44 +1,46 @@
-<div class="page-start-point changeWidth mt-5 pt-4">
+<div class="page-start-point changeWidth pt-4">
 
   <ng-container *ngIf="(dataSourceTemp == null) ||  (dataSourceTemp == []) || dataSourceTemp.length==0 ">
-      <div class="p-l-20 p-r-20 p-b-20 min-height parent wrapper-btn-center">
-     <div class="add-user-img suppliers">
-          <img src="../../../../assets/images/supplier-background.png" alt="BuildSupply_Logo">
-             <div>
-                  <p>
-                    You haven't added any supplier yet. <br>
-                    Please create one to continue.
-                  </p>
-            </div>
-                <button  mat-raised-button  (click)="addSupplier()" class="main-background-color main-button color-white">
-                  Add First Supplier
-                </button>
-                <br>
-                <p>
-                  <br>
-                  Or 
-                </p>
-                 <div class=" d-flex justify-content-center" appDnd>
-                    <div class="mr-3 p-t-10">
-                      <span  class="cursor-pointer">
-                        <img src="assets/images/download.png" alt="download" class="img-fluid mr-2 cursor-pointer ">
-                        <a class="cursor-pointer"(click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')"> Download Supplier Template</a></span>
-                    </div>
-                    <div  class="mr-3 p-t-10 cursor-pointer">
-                      <input type="file" accept=".xlsx" #fileDropRef id="fileDropRef" class="fileupload cursor-pointer" style="display: none;" multiple
-                        (change)="uploadExcel($event.target.files)" />
-                      <label for="fileDropRef" class="cursor-pointer upload-template"> <img src="assets/images/upload.png" alt="upload" class="img-fluid mr-2 w-30 cursor-pointer"> Upload Supplier Template</label>
-                    </div>
-          </div>
-  </div>
+    <div class="p-l-20 p-r-20 p-b-20 min-height parent wrapper-btn-center">
+      <div class="add-user-img suppliers">
+        <img src="../../../../assets/images/supplier-background.png" alt="BuildSupply_Logo">
+        <div>
+          <p>
+            You haven't added any supplier yet. <br>
+            Please create one to continue.
+          </p>
         </div>
-       
-       
+        <button mat-raised-button (click)="addSupplier()" class="main-background-color main-button color-white">
+          Add First Supplier
+        </button>
+        <br>
+        <p>
+          <br>
+          Or
+        </p>
+        <div class=" d-flex justify-content-center" appDnd>
+          <div class="mr-3 p-t-10">
+            <span class="cursor-pointer">
+              <img src="assets/images/download.png" alt="download" class="img-fluid mr-2 cursor-pointer ">
+              <a class="cursor-pointer" (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')"> Download
+                Supplier Template</a></span>
+          </div>
+          <div class="mr-3 p-t-10 cursor-pointer">
+            <input type="file" accept=".xlsx" #fileDropRef id="fileDropRef" class="fileupload cursor-pointer"
+              style="display: none;" multiple (change)="uploadExcel($event.target.files)" />
+            <label for="fileDropRef" class="cursor-pointer upload-template"> <img src="assets/images/upload.png"
+                alt="upload" class="img-fluid mr-2 w-30 cursor-pointer"> Upload Supplier Template</label>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
   </ng-container>
 
 
   <ng-container *ngIf="dataSourceTemp && dataSourceTemp.length>0">
-   
+
     <div class="row" class="dashboard-unique p-b-20 min-height parent supplier-screen">
       <!-- <div class="text-right add-user-details-button-right">
           <button mat-raised-button (click)="addSupplier()"
@@ -46,103 +48,113 @@
             Add Supplier
           </button>
         </div> -->
- <div class="row">
-      <div class="col-sm-4 col-md-3 column-1">
-        <mat-form-field class="example-form-field border-input">
-          <input matInput placeholder="Search Suppliers" type="search" (keyup)="applyFilter($event.target.value)" />
-          <button mat-button matSuffix mat-icon-button>
-            <mat-icon>search</mat-icon>
-          </button>
-        </mat-form-field>
-      </div>
-      <div class="col-sm-8 col-md-9 column-2">
-        <div [ngClass]="showResponsiveDesignIcons ? 'text-right add-user-details-button-right p-t-10' : 'text-right add-user-details-button-right p-t-10 p-r-20'">
-          <div class="text-right d-flex justify-content-end" appDnd>
-            <div class="mr-3 p-t-10">
-              <span  class="cursor-pointer">
-                <img *ngIf="!showResponsiveDesignIcons" src="assets/images/download.png" alt="download" class="img-fluid mr-2 cursor-pointer " (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')">
-                <img *ngIf="showResponsiveDesignIcons" src="assets/images/excel-download-res.svg" alt="download" class="img-fluid mr-2 cursor-pointer " (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')">
+      <div class="row">
+        <div class="col-sm-4 col-md-3 column-1">
+          <mat-form-field class="example-form-field border-input">
+            <input matInput placeholder="Search Suppliers" type="search" (keyup)="applyFilter($event.target.value)" />
+            <button mat-button matSuffix mat-icon-button>
+              <mat-icon>search</mat-icon>
+            </button>
+          </mat-form-field>
+        </div>
+        <div class="col-sm-8 col-md-9 column-2">
+          <div
+            [ngClass]="showResponsiveDesignIcons ? 'text-right add-user-details-button-right p-t-10' : 'text-right add-user-details-button-right p-t-10 p-r-20'">
+            <div class="text-right d-flex justify-content-end" appDnd>
+              <div class="mr-3 p-t-10">
+                <span class="cursor-pointer">
+                  <img *ngIf="!showResponsiveDesignIcons" src="assets/images/download.png" alt="download"
+                    class="img-fluid mr-2 cursor-pointer "
+                    (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')">
+                  <img *ngIf="showResponsiveDesignIcons" src="assets/images/excel-download-res.svg" alt="download"
+                    class="img-fluid mr-2 cursor-pointer "
+                    (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')">
 
-                <a class="cursor-pointer" *ngIf="!showResponsiveDesignIcons" (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')">
+                  <a class="cursor-pointer" *ngIf="!showResponsiveDesignIcons"
+                    (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')">
                     Download Supplier Template
-                </a></span>
-            </div>
-            <div  class="mr-3 p-t-10 cursor-pointer">
-              <input type="file" accept=".xlsx" #fileDropRef id="fileDropRef" class="fileupload cursor-pointer" style="display: none;" multiple
-                (change)="uploadExcel($event.target.files)" />
-              <label for="fileDropRef" class="cursor-pointer upload-template"> 
-                <img *ngIf="!showResponsiveDesignIcons" src="assets/images/upload.png" alt="upload" class="img-fluid mr-2 w-30 cursor-pointer"> 
-                <img *ngIf="showResponsiveDesignIcons" src="assets/images/upload-res.svg" alt="upload" class="img-fluid mr-2 w-30 cursor-pointer"> 
-                <span *ngIf="!showResponsiveDesignIcons">
-                  Upload Supplier Template
-                </span> 
+                  </a></span>
+              </div>
+              <div class="mr-3 p-t-10 cursor-pointer">
+                <input type="file" accept=".xlsx" #fileDropRef id="fileDropRef" class="fileupload cursor-pointer"
+                  style="display: none;" multiple (change)="uploadExcel($event.target.files)" />
+                <label for="fileDropRef" class="cursor-pointer upload-template">
+                  <img *ngIf="!showResponsiveDesignIcons" src="assets/images/upload.png" alt="upload"
+                    class="img-fluid mr-2 w-30 cursor-pointer">
+                  <img *ngIf="showResponsiveDesignIcons" src="assets/images/upload-res.svg" alt="upload"
+                    class="img-fluid mr-2 w-30 cursor-pointer">
+                  <span *ngIf="!showResponsiveDesignIcons">
+                    Upload Supplier Template
+                  </span>
                 </label>
-            </div>
-              <button mat-raised-button (click)="addSupplier()" class="main-background-color main-button color-white add-supplier-button">
+              </div>
+              <button mat-raised-button (click)="addSupplier()"
+                class="main-background-color main-button color-white add-supplier-button">
                 Add Supplier
               </button>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
 
 
       <!-- first table structure -->
-        <!-- <div class="col-sm-12"> -->
-        <!-- table structure -->
-        <div class="supplier-details-table-div add-unique-container mat-elevation-z8 " *ngIf="dataSourceTemp && dataSourceTemp.length>0">
-          <table mat-table [dataSource]="dataSource" >
-            <!--- Note that these columns can be defined in any order.
+      <!-- <div class="col-sm-12"> -->
+      <!-- table structure -->
+      <div class="supplier-details-table-div add-unique-container mat-elevation-z8 "
+        *ngIf="dataSourceTemp && dataSourceTemp.length>0">
+        <table mat-table [dataSource]="dataSource">
+          <!--- Note that these columns can be defined in any order.
                     The actual rendered columns are set as a property on the row definition" -->
 
-            <!-- Position Column -->
+          <!-- Position Column -->
 
-            <ng-container matColumnDef="suppliername">
-              <th mat-header-cell *matHeaderCellDef>Supplier Name</th>
-              <td mat-cell *matCellDef="let element" class="pt-2">
-                <span class="supplier-name">{{ element.supplier_name}}</span>
-                <span class="d-block supplier-rates">
-                  <view-rating [supplierId]="element.supplierId" [ratings]="element.supplier_rating"></view-rating>
-                </span>
-              </td>
-            </ng-container>
+          <ng-container matColumnDef="suppliername">
+            <th mat-header-cell *matHeaderCellDef>Supplier Name</th>
+            <td mat-cell *matCellDef="let element" class="pt-2">
+              <span class="supplier-name">{{ element.supplier_name}}</span>
+              <span class="d-block supplier-rates">
+                <view-rating [supplierId]="element.supplierId" [ratings]="element.supplier_rating"></view-rating>
+              </span>
+            </td>
+          </ng-container>
 
-            <!-- Name Column -->
-            <ng-container matColumnDef="email">
-              <th mat-header-cell *matHeaderCellDef>Email</th>
-              <td mat-cell *matCellDef="let element">
-                {{ element.email }}
-              </td>
-            </ng-container>
+          <!-- Name Column -->
+          <ng-container matColumnDef="email">
+            <th mat-header-cell *matHeaderCellDef>Email</th>
+            <td mat-cell *matCellDef="let element">
+              {{ element.email }}
+            </td>
+          </ng-container>
 
-            <!-- Weight Column -->
-            <ng-container matColumnDef="contactNo">
-              <th mat-header-cell *matHeaderCellDef>Contact No.</th>
-              <td mat-cell *matCellDef="let element">
-                {{ element.contact_no }}
-              </td>
-            </ng-container>
+          <!-- Weight Column -->
+          <ng-container matColumnDef="contactNo">
+            <th mat-header-cell *matHeaderCellDef>Contact No.</th>
+            <td mat-cell *matCellDef="let element">
+              {{ element.contact_no }}
+            </td>
+          </ng-container>
 
-            <!-- Symbol Column -->
-            <!-- <ng-container matColumnDef="pan">
+          <!-- Symbol Column -->
+          <!-- <ng-container matColumnDef="pan">
               <th mat-header-cell *matHeaderCellDef>PAN</th>
               <td mat-cell *matCellDef="let element">
                 {{ element.pan }}
               </td>
             </ng-container> -->
 
-            <!-- Symbol Column -->
-            <ng-container matColumnDef="status">
-              <th mat-header-cell *matHeaderCellDef>Status</th>
-              <td mat-cell *matCellDef="let element">
-                <ng-container *ngIf="element.status == 0"> Active </ng-container>
-                <ng-container *ngIf="element.status == 1"> Inactive </ng-container>
-              </td>
-            </ng-container>
+          <!-- Symbol Column -->
+          <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef>Status</th>
+            <td mat-cell *matCellDef="let element">
+              <ng-container *ngIf="element.status == 0"> Active </ng-container>
+              <ng-container *ngIf="element.status == 1"> Inactive </ng-container>
+            </td>
+          </ng-container>
 
 
-            <!-- <ng-container matColumnDef="star" stickyEnd>
+          <!-- <ng-container matColumnDef="star" stickyEnd>
               <th mat-header-cell *matHeaderCellDef class="edit-disable-user-details-width"></th>
               <td mat-cell *matCellDef="let element" class="edit-disable-user-details-width">
 
@@ -155,12 +167,12 @@
               </td>
             </ng-container> -->
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns;sticky: true"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-          </table>
-        </div>
-        <!-- end structure -->
-        <!-- </div> -->
+          <tr mat-header-row *matHeaderRowDef="displayedColumns;sticky: true"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        </table>
+      </div>
+      <!-- end structure -->
+      <!-- </div> -->
     </div>
   </ng-container>
 
