--- a/src/app/shared/components/subscriptions/subscriptions.component.html
+++ b/src/app/shared/components/subscriptions/subscriptions.component.html
@@ -16,9 +16,8 @@
   <mat-tab-group mat-align-tabs="center" disableRipple>
     <mat-tab *ngFor="let subscription of subscriptionsData">
       <ng-template mat-tab-label>
-        <span *ngIf="subscription.discountPercent" class="sub-svtxt brand-color" [ngClass]="isMobile ? 'font-size10' : 'font-size12'"
-          >(Save {{ subscription.discountPercent }}%)</span
-        >
+        <span *ngIf="subscription.discountPercent" class="sub-svtxt brand-color"
+          [ngClass]="isMobile ? 'font-size10' : 'font-size12'">(Save {{ subscription.discountPercent }}%)</span>
         {{ subscription.frequencyHeader }}
       </ng-template>
 
@@ -32,38 +31,28 @@
                   <mat-card-subtitle class="subs-pricing">
                     <strong>{{ plan.currencyCode }} {{ plan.planPrice }}/</strong>
                     <span>{{ plan.planFrequencyAlias }}</span>
-                    <p *ngIf="subscription.discountPercent">Save {{ plan.currencyCode }} {{ getSubsciptionDiscounted(subscription.discountPercent, plan.planPrice) }} a year</p>
+                    <p *ngIf="subscription.discountPercent">Save {{ plan.currencyCode }}
+                      {{ getSubsciptionDiscounted(subscription.discountPercent, plan.planPrice) }} a year</p>
                   </mat-card-subtitle>
                 </mat-card-header>
 
                 <mat-card-content class="plan-limit justify-content-between">
                   <span>{{ plan.planLimit.projectCount }} Project {{ plan.planLimit.userCount }} Users</span>
                   <ng-container *ngIf="plan.activeSubscription === null">
-                    <button
-                      *ngIf="trialAction"
-                      mat-button
-                      class="main-background-color subs-btn"
-                      (click)="choosePlan('1', plan.planId, plan.offerId, plan.planPricingId, plan.planEncryptId, plan.planPricingEncryptId)"
-                    >
+                    <button *ngIf="trialAction" mat-button class="main-background-color subs-btn"
+                      (click)="choosePlan('1', plan.planId, plan.offerId, plan.planPricingId, plan.planEncryptId, plan.planPricingEncryptId)">
                       Free Trial
                     </button>
-                    <button
-                      *ngIf="!trialAction"
-                      mat-raised-button
-                      class="main-background-color subs-btn"
-                      (click)="choosePlan('0', plan.planId, plan.offerId, plan.planPricingId, plan.planEncryptId, plan.planPricingEncryptId)"
-                    >
+                    <button *ngIf="!trialAction" mat-raised-button class="main-background-color subs-btn"
+                      (click)="choosePlan('0', plan.planId, plan.offerId, plan.planPricingId, plan.planEncryptId, plan.planPricingEncryptId)">
                       Choose Plan
                     </button>
                   </ng-container>
                   <ng-container *ngIf="plan.activeSubscription !== null">
-                    <button *ngIf="plan.isTrialActive === 0" mat-button class="subs-link" (click)="unsubscribePlan(plan.activeSubscription.subscriptionId)">Unsubscribe</button>
-                    <button
-                      *ngIf="plan.isTrialActive === 1"
-                      mat-raised-button
-                      class="main-background-color subs-btn"
-                      (click)="choosePlan('0', plan.planId, plan.offerId, plan.planPricingId, plan.planEncryptId, plan.planPricingEncryptId)"
-                    >
+                    <button *ngIf="plan.isTrialActive === 0" mat-button class="subs-link"
+                      (click)="unsubscribePlan(plan.activeSubscription.subscriptionId)">Unsubscribe</button>
+                    <button *ngIf="plan.isTrialActive === 1" mat-raised-button class="main-background-color subs-btn"
+                      (click)="choosePlan('0', plan.planId, plan.offerId, plan.planPricingId, plan.planEncryptId, plan.planPricingEncryptId)">
                       Choose Plan
                     </button>
                   </ng-container>
@@ -78,7 +67,8 @@
                 </ng-container>
                 <mat-card-actions class="feat-list pt-1 pl-4 pb-3" [ngClass]="isMobile ? 'f-hide' : ''">
                   <ul>
-                    <li *ngFor="let feature of sortFeaturesObjList(plan.planFeatureObjList)" [ngClass]="feature.available ? 'active' : 'inactive'">
+                    <li *ngFor="let feature of sortFeaturesObjList(plan.planFeatureObjList)"
+                      [ngClass]="feature.available ? 'active' : 'inactive'">
                       <ng-container *ngIf="feature.available; else notAvailable">
                         <span class="material-icons">done</span>
                       </ng-container>
