--- a/src/assets/scss/layout/header.scss
+++ b/src/assets/scss/layout/header.scss
@@ -1,7 +1,7 @@
 .header-fixed {
   position: fixed;
   width: 100%;
-  z-index: 1000;
+  z-index: 997;
   mat-button:hover {
     background: none;
   }
@@ -202,8 +202,8 @@ button.active {
     position: fixed;
     // width: 16%;
     top: 0;
-    z-index: 99;
-    padding-top: 65px;
+    z-index: 998;
+    margin-top: 64px;
 }
 
 .mat-arrow-icon{
@@ -211,7 +211,7 @@ button.active {
   border-radius: 50%;
   position: fixed;
   top: 74px;
-  z-index: 999;
+  z-index: 1000;
   box-shadow: 0 0 10px #8e8e8e;
   border: 1px solid #e1e1e1;
 }
@@ -236,7 +236,7 @@ button.active {
 
 .sidenav{
   background-color: #ffffff;
-  box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
+  box-shadow: 0px 5px 10px rgba(0,0,0,0.5);
 }
 
 .no-collapsed{
@@ -279,6 +279,20 @@ button.active {
   padding: 17px 5px;
   img{
     max-width: 40px;
+  }
+}
+
+.trial-block{
+  background-color: #2496bb;
+  color:#ffffff;
+  display: block;
+  text-align: center;
+  position: relative;
+  padding: 5px;
+  button{
+    line-height: 28px;
+    border-radius:20px;
+    padding: auto 16px;
   }
 }
 
