--- a/src/app/features/dashboard/bom/bom-table/bom-table.component.html
+++ b/src/app/features/dashboard/bom/bom-table/bom-table.component.html
@@ -25,10 +25,10 @@
               Raise Indent
             </mat-option>
             <mat-option (click)="openGrnDialog()" class="height-2-em main-color">
-              Create Grn Via System
+              Create Receipts Via System
             </mat-option>
             <mat-option (click)="openGrnViaExcelDialog()" class="height-2-em main-color">
-              Create Grn Via Excel
+              Create Receipts Via Excel
             </mat-option>
           </mat-select>
         </mat-form-field>
