--- a/src/assets/scss/pages/common.scss
+++ b/src/assets/scss/pages/common.scss
@@ -404,17 +404,16 @@ ngx-mat-drp-picker-overlay {
   border-radius: 0;
 }
 
-
-.m-stepper{
-  .mat-horizontal-stepper-header{
+.m-stepper {
+  .mat-horizontal-stepper-header {
     padding: 0 16px;
   }
-  .mat-step-icon{
+  .mat-step-icon {
     height: 16px;
     width: 16px;
     font-size: 11px;
   }
-  .mat-step-label{
+  .mat-step-label {
     display: inline-block;
     font-size: 11px;
     white-space: break-spaces;
@@ -425,13 +424,13 @@ ngx-mat-drp-picker-overlay {
   }
 }
 
-.po-sm-btn{
+.po-sm-btn {
   min-width: auto !important;
   padding: 0 16px !important;
 }
 
-.po-sm-fm{
-  .mat-form-field{
+.po-sm-fm {
+  .mat-form-field {
     font-size: 12px !important;
   }
 }
@@ -463,126 +462,134 @@ ngx-mat-drp-picker-overlay {
 .not-allowed {
   cursor: not-allowed !important;
 }
-.po-rdbtn{
+.po-rdbtn {
   vertical-align: sub;
 }
 
-.m-popd{
-  .mat-horizontal-content-container{
+.m-popd {
+  .mat-horizontal-content-container {
     padding-left: 10px;
     padding-right: 10px;
   }
 }
 
-.m-podr{
-  .m-itm{
-    &:nth-child(1){
+.m-podr {
+  .m-itm {
+    &:nth-child(1) {
       order: 2;
     }
-    &:nth-child(2){
+    &:nth-child(2) {
       order: 1;
     }
-    &:nth-child(3){
+    &:nth-child(3) {
       order: 3;
     }
   }
 }
 
-.m-podr1{
-  .m-itm{
-    &:nth-child(1){
+.m-podr1 {
+  .m-itm {
+    &:nth-child(1) {
       order: 3;
     }
-    &:nth-child(2){
+    &:nth-child(2) {
       order: 4;
     }
-    &:nth-child(3){
+    &:nth-child(3) {
       order: 1;
     }
-    &:nth-child(4){
+    &:nth-child(4) {
       order: 2;
     }
   }
 }
 
-.m-podr2{
-  .m-itm{
-    &:nth-child(1){
+.m-podr2 {
+  .m-itm {
+    &:nth-child(1) {
       order: 4;
     }
-    &:nth-child(2){
+    &:nth-child(2) {
       order: 2;
     }
-    &:nth-child(3){
+    &:nth-child(3) {
       order: 1;
     }
-    &:nth-child(4){
+    &:nth-child(4) {
       order: 3;
     }
   }
 }
 
-.m-podr3{
-  .m-itm{
-    &:nth-child(1){
+.m-podr3 {
+  .m-itm {
+    &:nth-child(1) {
       order: 3;
     }
-    &:nth-child(2){
+    &:nth-child(2) {
       order: 1;
     }
-    &:nth-child(3){
+    &:nth-child(3) {
       order: 2;
     }
   }
 }
 
-.m-podr4{
-  .m-itm{
-    &:nth-child(1){
+.m-podr4 {
+  .m-itm {
+    &:nth-child(1) {
       order: 2;
     }
-    &:nth-child(2){
+    &:nth-child(2) {
       order: 3;
     }
-    &:nth-child(3){
+    &:nth-child(3) {
       order: 1;
     }
   }
 }
 
-.mcrncy{
-  img{
+.mcrncy {
+  img {
     width: 18px;
   }
 }
 
-.w-25-px{
+.w-25-px {
   width: 25px;
 }
-.w-20-px{
+.w-20-px {
   width: 20px;
 }
 
-.m-srch{
-  .mat-icon-button .mat-icon{
+.m-srch {
+  .mat-icon-button .mat-icon {
     font-size: 20px !important;
   }
-  .mat-form-field{
+  .mat-form-field {
     display: block !important;
   }
 }
-.mtpd-2px{
-  .mat-form-field{
+.mtpd-2px {
+  .mat-form-field {
     padding-top: 2px;
   }
 }
 
-.lbm{
-  label{
+.lbm {
+  label {
     margin-bottom: 0;
   }
 }
 
-.min-w-150px{
+.min-w-150px {
   min-width: 150px;
+}
+
+.hiddenTooltip {
+  position: absolute;
+  visibility: hidden;
+  left: 0;
+  width: 0;
+  top: 3em;
 }
