--- a/src/app/features/dashboard/bom/bom-table/bom-table.component.html
+++ b/src/app/features/dashboard/bom/bom-table/bom-table.component.html
@@ -173,13 +173,14 @@
             Attached Images
           </th>
           <td
-            class="text-align-center"
+            class="text-align-center bom-attached-images-col"
             mat-cell
             *matCellDef="let element"
             [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}"
           >
             <!-- View image modal link -->
-            <div *ngIf="element?.documentsList?.length" class="images-lists" (click)="viewAllImages(element.projectId, element.materialId)">
+            <div *ngIf="element?.documentsList?.length" class="images-lists" [ngClass]="element.documentsList.length === 1 ? 'single-image' : (element.documentsList.length === 2 ? 'double-images' : 'triple-images')"
+              (click)="viewAllImages(element.projectId, element.materialId)">
               <ng-container *ngFor="let img of element.documentsList; let i = index">
                 <img [src]="img.documentThumbnailUrl" alt="project{{ i }}" class="img-fluid attached-image" *ngIf="i < 3" />
               </ng-container>
