--- a/src/assets/scss/pages/bom.scss
+++ b/src/assets/scss/pages/bom.scss
@@ -373,3 +373,42 @@ div.limited-character.bom {
     padding-top: 0px !important;
   }
 }
+
+.search-project-div{
+  padding: 10px 15px 5px;
+  border-bottom: 1px solid #e1e1e1;
+}
+
+/** image css for BOM if(single, double and triple images in the list)**/
+.bom-attached-images-col{
+  .images-lists.single-image .attached-image:first-child {
+    margin: auto;
+    position: relative;
+    top: 0;
+    left: 0;
+  }
+  
+  .images-lists.double-images{
+    .attached-image:first-child {
+      left: 24px;
+    }
+  
+    .attached-image:nth-child(2) {
+      left: 30px;
+    }
+  }
+
+  .images-lists.triple-images{
+    .attached-image:nth-child(3) {
+      left: 32px;
+    }
+
+    .attached-image:nth-child(2) {
+      left: 26px;
+    }
+
+    .attached-image:first-child {
+      left: 20px;
+    }
+  }
+}
