--- a/src/assets/scss/pages/supplier.scss
+++ b/src/assets/scss/pages/supplier.scss
@@ -1031,3 +1031,10 @@ h3 {
     }
   }
 }
+
+.mat-row.supplierLevel {
+  height: auto;
+  min-height: auto;
+  max-height: 75px;
+  padding: 6px 0;
+}
