supplier detail page - download/upload icons changed, alignment issue fixed

--- a/src/app/features/dashboard/bom/bom.component.html
+++ b/src/app/features/dashboard/bom/bom.component.html
@@ -58,7 +58,7 @@
                 <!-- Download BOM Link -->
                 <div class="mr-3 ptop-10">
                   <span class="cursor-pointer download-bom-template">
-                    <img src="assets/images/download-bom.svg" alt="download" class="img-fluid mr-2" />
+                    <img src="assets/images/download-bom.svg" alt="download" class="img-fluid mr-2 w-45" />
                     <a (click)="downloadExcel('assets/images/bom_template.xlsx')"> Download BOM Template</a></span
                   >
                 </div>
